# Frames-map-reduce

./: .travis.yml  CHANGELOG.md  CHANGELOG.ms  Frames-map-reduce.cabal  Readme.md  cabal.project  hie.yaml  stack.yaml  travis-script.sh
examples/: AddRowsByLabel.hs
src/Frames/: Aggregation.hs  Folds.hs  MapReduce.hs
src/Frames/Aggregation/: General.hs  Maybe.hs
src/Frames/Folds/: General.hs  Maybe.hs
src/Frames/MapReduce/: General.hs  Maybe.hs
src/Frames/Monomorphic/: Folds.hs  MapReduce.hs
src/Frames/Polymorphic/: MapReduce.hs
