cabal-version:       2.2.0

name:                Frames-map-reduce
version:             0.2.0.0
synopsis:            Frames wrapper for map-reduce-folds and some extra folds helpers.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam_conner_sax@yahoo.com
copyright:           (c) Adam Conner-Sax 2019
category:            Data
extra-source-files:  CHANGELOG.md    
Build-type: Simple
                     
common deps
  build-depends: base >= 4.11.1.0
               , containers
               , Frames
               , foldl
               , vinyl >= 0.10.0.1

library
  import: deps
  ghc-options: -Wall -O2 -funbox-strict-fields
  exposed-modules: Frames.Folds
                 , Frames.MapReduce

  build-depends:    hashable
                  , newtype
                  , profunctors
                  , map-reduce-folds

  hs-source-dirs:      src
  default-language:    Haskell2010

