cabal-version:       2.2.0

name:                Frames-map-reduce
version:             0.2.0.0
synopsis:            Frames wrapper for map-reduce-folds and some extra folds helpers.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam_conner_sax@yahoo.com
copyright:           (c) Adam Conner-Sax 2019
category:            Data
extra-source-files:  CHANGELOG.md    
Build-type: Simple
                     
library
  ghc-options: -Wall -O2 -funbox-strict-fields
  exposed-modules: Frames.Folds
                 , Frames.MapReduce

  build-depends: Frames               >= 0.6.1 && < 0.7,
                 base                 >= 4.12.0 && < 4.13,
                 containers           >= 0.6.0 && < 0.7,
                 hashable             >= 1.2.7 && < 1.3,
                 map-reduce-folds     >= 0.3.0.0,                 
                 profunctors          >= 5.3 && < 5.4,
                 vinyl                >= 0.11.0 && < 0.12,
                 foldl                >= 1.4.5 && < 1.5,
                 newtype              >= 0.2 && < 0.3,


  hs-source-dirs:      src
  default-language:    Haskell2010

